* 2007-09-11 - martin.kauss@open-xchange.com

 - Fixed bug #9137. It was not possible to move/edit an private appointment.
   This has been fixed.

 - Fixed bug #9191. Only the first reminder of a recurring appointment was
   shown after clicking on OK. This has been fixed.

* 2007-09-11 - marcus.klein@open-xchange.com

 - Bugfix #9341: Fixed returning null instead of throwing exception if context
   is not found.
 - Bugfix #9364: Using same mechanisms for modifying a search pattern for groups
   and resources.
 - Bugfix #8935: Removed replacing the string "null" with null.
 - Bugfix #9209: Illegal files for import now give all a message in the panel.
 - Bugfix #9384: Reloading task before updating last_modified to prevent
   exception on unsynchronized server times.

* 2007-09-10 - thorben.betten@open-xchange.com

 - Bugfix #9346: Changed mail component's code back to "MSG"

* 2007-09-10 - francisco.lagunar@open-xchange.com

 - Bugfix #9256 : Don't write "null" in the subject line for notification
   mails if the title isn't set.

* 2007-09-07 - choeger@open-xchange.com

 - Bugfix #9235 Crypt implementation should be able to handle UTF-8

* 2007-09-07 - thorben.betten@open-xchange.com

 - Bugfix #9229: Fixed parsing of html links starting with "news."

* 2007-09-07 - ben.pahne@open-xchange.com

 - Fixed bug #9255 - Typos in error message
 - Fixed bug #8456 - Changed an error message

* 2007-09-06 - martin.kauss@open-xchange.com

 - Fixed bugs #9205 and 9132
   9205: Move with participants from a public to a private folder failed 
   with an error message. This has been fixed.
   9132: If the original recurring appointment contains a resource an error
   occurred if an exception is created. This has been fixed.

* 2007-09-06 - thorben.betten@open-xchange.com

 - Bugfix #6335: Checking for invalid characters in folders.
 - Bugfix #9299: Added fast IMAP fetch to avoid high time latencies when
   listing messages in large mail folders